--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "antd": "^5.16.4",
     "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
+    "flowbite": "^2.3.0",
     "formik": "^2.4.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
